--- a/templates/post.html
+++ b/templates/post.html
@@ -1,25 +1,72 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<form>
+<h2 class="post-heading">Review Post</h2>
+<form class="form form-post">
+    <div class="">
+        <fieldset class="fieldset">
+        
+            <legend class="post-legend">Author's Section</legend>
+            <div class="author-section">
+                <label for="author">Athor's Name</label>
+                <input type="text" name="author" id="author">
+                <br>
+                <label for="nickname">Author's Nickname</label>
+                <input type="text" name="nickname" id="nickname">
+                <br>
+                <label for="authors-picture">Author's Picture</label>
+                <input type="file" name="authors-picture" id="authors-picture">
+            </div>
+        </fieldset>
+        <hr>
+        <fieldset class="fieldset">
+            <legend class="post-legend">Game Section</legend>
+            <div class="game-title-sectino">           
+                <label for="game-title">Game Title</label>
+                <input type="text" name="game-title" id="game-title">
+                <br>
+                <label for="release-date">Game Release</label>
+                <input type="date" name="release-date">
+                <br>
+                <label for="game-cover">Cover Picture</label>
+                <input type="file" name="game-cover" id="game-cover">
+            </div>
+        </fieldset>
+        <hr>
+        <fieldset class="fieldset">
+            <legend class="post-legend">Load 5 pictures for the post</legend>
+            <p>Select five pictres for the review</p>
+            <div class="gallery-section">
+                <label for="Picture -1">Picture </label>
+                <input type="file" name="Picture -" id="Picture -1">
+                <br>
+                <label for="Picture -2">Picture  </label>
+                <input type="file" name="Picture -" id="Picture -2">
+                <br>
+                <label for="Picture -3">Picture  </label>
+                <input type="file" name="Picture -" id="Picture -3">
+                <br>
+                <label for="Picture -4">Picture  </label>
+                <input type="file" name="Picture -" id="Picture -4">
+                <br>
+                <label for="Picture -5">Picture  </label>
+                <input type="file" name="Picture -" id="Picture -5">
+            </div>
+        </fieldset>
 
-    <legend></legend>
-    <input type="text">
+        <fieldset class="fieldset">
+            <legend class="post-review">Review</legend>
+            <div class="review">
+                <textarea name="" id="" cols="55" rows="15">
+                
+                </textarea>
+            </div>
+        </fieldset>
 
-    <legend></legend>
-    <input type="text">
-
-    <legend></legend>
-    <input type="text">
-
-    <legend></legend>
-    <input type="text">
-
-    <legend></legend>
-    <input type="file">
-
-    <input type="submit" value="Submit">
-
+        <input type="submit" value="Submit" class="submit btn btn-success">
+    </div>
 </form>
+
+<div class="spacer col-12"></div>
 
 {% endblock %}
