--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,9 @@
     <title>bottleneck</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand noto" href="#">Bottleneck</a>
+    <nav class="navbar navbar-expand-sm navbar-dark ">
+        <div class="container ">
+            <a class="navbar-brand " href="#">Bottleneck</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,7 +38,7 @@
     </nav>
     <main class="main text-white">   
         
-        <div class="container">
+        <div class="container post-container">
             {% block content %}
             {% endblock %}
         </div>
