--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,12 @@
 
 <form class="form form-login" method="POST">
     <div class="login-container">
-        <legend >Login</legend>
+        <legend class="login">Login</legend>
         <label for="username">Username: </label>
-        <input type="text" name="username" id="username" placeholder="Username"/>
+        <input type="text" name="username" id="username" placeholder="Username" class="login-input"/>
         <br>
         <label for="password">Password: </label>
-        <input type="password" name="password" id="password" placeholder="password">
+        <input type="password" name="password" id="password" placeholder="password" class="login-input"/>
         <br>
         <div class="submit-container">
             <button class="submit submit-login btn btn-success">Lets go!</button>
