Creating Login route and function

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </nav>
-    <main class="main text-white">   
+    <main class="main ">   
         
         <div class="container post-container">
             {% block content %}
