--- a/templates/post.html
+++ b/templates/post.html
@@ -9,42 +9,37 @@
             <legend class="post-legend">Author's Section</legend>
             <div class=" author-section">
                 <div class="col-12">
-                    <label for="author">Athor's Name</label>
+                    <label for="author">Athor's Name/Nickname</label>
                 </div>
                 <div class="col-12">
                     <input type="text" name="author" id="author">
                 </div>
-                <br>
-                <div class="col-12">
-                    <input type="text" name="nickname" id="nickname">
-                </div>
+
                 <br>
 
                 <div class="col-12"><label for="authors-picture">Author's Picture</label></div>
                 <div class="col-12"><input type="file" class="btn btn-info" name="authors-picture" id="authors-picture"></div>
-                
-                
             </div>
-        </fieldset>
+        
         <hr>
-        <fieldset class="fieldset">
+
             <div class="game-title-section">
             <legend class="post-legend">Game Section</legend>
                 <div class="col-12"><label for="game-title">Game Title</label></div>
                 <div class="col-12"><input type="text" name="game-title" id="game-title"></div>
                 
                 <br>
-                <div class="col-12"><label for="release-date">Game Release</label></div>
-                <div class="col-12"><input type="date" name="release-date"></div>
-                
+
+                <div class="col-12"><label for="release-date">Game Release: </label> <input type="date" name="release-date"></div>
+               
                 <br>
                 <div class="col-12"><label for="game-cover">Cover Picture</label></div>
                 <div class="col-12"><input type="file" name="game-cover" id="game-cover"></div>
                 
             </div>
-        </fieldset>
+
         <hr>
-        <fieldset class="fieldset">
+
             <legend class="post-legend">Load 5 pictures for the post</legend>
             <p>Select five pictres for the review</p>
             <div class="col-12"><label for="Picture -1">Picture </label></div>
@@ -70,16 +65,11 @@
                 <div class="col-12"><label for="Picture -5">Picture  </label></div>
                 <div class="col-12"><input type="file" name="Picture -" id="Picture -5"></div>
                 
-        </fieldset>
 
-        <fieldset class="fieldset">
             <div class="col-12">
                 <legend class="post-review">Review</legend>
-                <div class="review">
-                    <textarea name="review" id="review" ></textarea>
-                </div>
+                <textarea name="review" id="review" class="review"></textarea>
             </div>
-            
         </fieldset>
 
         <div class="col-12">
