--- a/templates/post.html
+++ b/templates/post.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Create a new post{% endblock %}
 {% block content %}
 
 <h2 class="post-heading">Review Post</h2>
@@ -6,7 +7,7 @@
     <div class="row">
         <fieldset class="fieldset">
         
-            <legend class="post-legend">Author's Section</legend>
+            <!--legend class="post-legend">Author's Section</legend>
             <div class=" author-section">
                 <div class="col-12">
                     <label for="author">Athor's Name/Nickname</label>
@@ -21,7 +22,7 @@
                 <div class="col-12"><input type="file" class="btn btn-info" name="authors-picture" id="authors-picture"></div>
             </div>
         
-        <hr>
+        <hr-->
 
             <div class="game-title-section">
             <legend class="post-legend">Game Section</legend>
