--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Review of {% endblock %}
 {% block content %}
 
     
@@ -29,6 +30,8 @@
                         <div class="row title-background ">
                             <div class="col-md-9 col-10 title-container">
                                 <div class="game-title h3"><span>Super Smash Brothers: Ultimate</span>
+                                </div>
+                                <div class="game-players h4">No. players: <span> No. of players</span>
                                 </div>
                                 <div class="game-release h4">Release Date: <span> Release/Date</span>
                                 </div>
@@ -73,11 +76,11 @@
                     <div class="text-center">THE GOOD</div>
                     <div>
                         <ul class="list-pros">
-                            <li>Pros 1</li>
-                            <li>Pros 2</li>
-                            <li>Pros 3</li>
-                            <li>Pros 4</li>
-                            <li>Pros 5</li>
+                            <li>Pros 1 long line to add content</li>
+                            <li>Pros 2 long line to add content</li>
+                            <li>Pros 3 long line to add content</li>
+                            <li>Pros 4 long line to add content</li>
+                            <li>Pros 5 long line to add content</li>
                         </ul>
                     </div>
                 </div>
@@ -85,11 +88,11 @@
                     <div class="text-center">THE BAD</div>
                     <div>
                         <ul class="list-cons">
-                            <li>Cons 1</li>
-                            <li>Cons 2</li>
-                            <li>Cons 3</li>
-                            <li>Cons 4</li>
-                            <li>Cons 5</li>
+                            <li>Cons 1 long line to add content</li>
+                            <li>Cons 2 long line to add content</li>
+                            <li>Cons 3 long line to add content</li>
+                            <li>Cons 4 long line to add content</li>
+                            <li>Cons 5 long line to add content</li>
                         </ul>
                     </div>
                 </div>
