--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,17 @@
 {% extends 'base.html' %}
+{% block title %}Pagina principal{% endblock %}
 {% block content %}
 
 
-<h1>Esto es un update</h1>
+    <h1>Esto es un update</h1>
 
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <p>{{ message }}</p>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
 
 
 
