--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                         </li>
                         <li class="nav-item {% if request.path == '/register' %}active{% endif %}">
-                            <a class="nav-link" href="#">Register</a>
+                            <a class="nav-link" href="{{ url_for('register') }}">Register</a>
                         </li> 
                     {% else %}
                         <li class="nav-item {% if request.path == '/game_review' %}active{% endif %}">
