--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-    <h1>Esto es un update</h1>
+    <h1>Domy message</h1>
 
     {% with messages = get_flashed_messages() %}
         {% if messages %}
