--- a/templates/base.html
+++ b/templates/base.html
@@ -27,24 +27,24 @@
                         <a class="nav-link" href="{{ url_for('game_review') }}">Reviews<span class="sr-only">(current)</span></a>
                     </li>
 
-                    {% if not g.user %}
+                    
+                        <li class="nav-item {% if request.path == '/game_review' %}active{% endif %}">
+                            <a class="nav-link" href="{{ url_for('post_review') }}">Post</a>
+                        </li>
+                       <li class="nav-item {% if request.path == '/user' %}active{% endif %}">
+                            <a class="nav-link" href="{{ url_for('user') }}">{{username}}</a>
+                        </li> 
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        </li>
+                    
                         <li class="nav-item {% if request.path == '/login' %}active{% endif %}">
                             <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                         </li>
                         <li class="nav-item {% if request.path == '/register' %}active{% endif %}">
                             <a class="nav-link" href="{{ url_for('register') }}">Register</a>
-                        </li> 
-                    {% else %}
-                        <li class="nav-item {% if request.path == '/game_review' %}active{% endif %}">
-                            <a class="nav-link" href="{{ url_for('post_game_review') }}">Post</a>
                         </li>
-                       <li class="nav-item {% if request.path == '/user' %}active{% endif %}">
-                            <a class="nav-link" href="{{ url_for('user') }}">{{g.user.username}}</a>
-                        </li> 
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
-                        </li>
-                    {% endif %}
+                    
 
                 </ul>
             </div>
@@ -60,7 +60,7 @@
     </main>
 
     <footer>
-        <a href="{{ url_for('contact_us') }}"></a>
+        <a href="{{ url_for('contact') }}"></a>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
