--- a/templates/register.html
+++ b/templates/register.html
@@ -3,12 +3,12 @@
 
 {% block content %}
 
-<form class="form form-register">
+<form class="form form-register" action="" method="POST">
     <label for="username">Name: </label>
-    <input type="text" id="username">
+    <input type="text" id="username" name="username">
     <br>
     <button<label for="email">Email: </label>
-    <input type="email" id="email">
+    <input type="email" id="email" name="email">
     <br>
     <label for="password">Password: </label>
     <input type="password" name="password" id="password">
