Resgister route, view and template changed to Signup

--- a/templates/user.html
+++ b/templates/user.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-{% block title %}{{ username }}{% endblock %}
+{% block title %}{{ user }}{% endblock %}
 
-    <h1>Welcome back {{username}}!</h1>
+    <h1>Welcome back {{user}}!</h1>
     <h2>You are user number #{{id}}</h2>
 
 {% endblock %}
