--- a/templates/base.html
+++ b/templates/base.html
@@ -23,27 +23,27 @@
 
             <div class="collapse navbar-collapse" id="navbarsExample03">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item {% if request.path == '/review' %}active{% endif %}">
-                        <a class="nav-link" href="{{ url_for('game_review') }}">Reviews<span class="sr-only">(current)</span></a>
-                    </li>
-
-                    
+                    {% if session["username"] %}
+                        <li class="nav-item {% if request.path == '/review' %}active{% endif %}">
+                            <a class="nav-link" href="{{ url_for('game_review') }}">Reviews<span class="sr-only">(current)</span></a>
+                        </li>
                         <li class="nav-item {% if request.path == '/game_review' %}active{% endif %}">
                             <a class="nav-link" href="{{ url_for('post_review') }}">Post</a>
                         </li>
-                       <li class="nav-item {% if request.path == '/user' %}active{% endif %}">
+                        <li class="nav-item {% if request.path == '/user' %}active{% endif %}">
                             <a class="nav-link" href="{{ url_for('user') }}">{{username}}</a>
                         </li> 
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                         </li>
-                    
+                    {% else %}
                         <li class="nav-item {% if request.path == '/login' %}active{% endif %}">
                             <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                         </li>
                         <li class="nav-item {% if request.path == '/register' %}active{% endif %}">
                             <a class="nav-link" href="{{ url_for('register') }}">Register</a>
                         </li>
+                    {% endif %}
                     
 
                 </ul>
