--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-    <h1>Hello!</h1>
+    <h1>Hello! {{ user }}</h1>
     {#
         {% for user in users %}
             <p>ID: {{user._id}}</p>
