--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
 
     <div class="spacer col-12"></div>
 
-    <form class="form form-login" method="POST">
+    <form class="form form-login" method="POST" action="{{url_for('login')}}">
         <div class="login-container">
             <legend class="login">Login</legend>
             <label for="username">Username: </label>
@@ -22,7 +22,7 @@
             <input type="password" name="password" id="password" placeholder="password" class="login-input"/>
             <br>
             <div class="submit-container">
-                <button class="submit submit-login btn btn-success">Lets go!</button>
+                <button type="submit" class="submit submit-login btn btn-success">Lets go!</button>
             </div>
         </div>
         
