Working on te post request to creat a new post

--- a/templates/post.html
+++ b/templates/post.html
@@ -26,23 +26,26 @@
 
             <div class="game-title-section">
             <legend class="post-legend">Game Section</legend>
-                <div class="col-12"><label for="game-title">Game Title</label></div>
-                <div class="col-12"><input type="text" name="game-title" id="game-title"></div>
+                <div class="col-12"><label for="post-title">Game Title</label></div>
+                <div class="col-12"><input type="text" name="post-title" id="post-title"></div>
                 
                 <br>
 
-                <div class="col-12"><label for="release-date">Game Release: </label> <input type="date" name="release-date"></div>
+                <div class="col-12">
+                    <label for="release-date">Game Release: </label>
+                    <input type="date" name="release-date">
+                </div>
                
                 <br>
-                <div class="col-12"><label for="game-cover">Cover Picture</label></div>
-                <div class="col-12"><input type="file" name="game-cover" id="game-cover"></div>
+                <div class="col-12"><label for="post-cover">Cover Picture</label></div>
+                <div class="col-12"><input type="file" name="post-cover" id="post-cover"></div>
                 
             </div>
 
         <hr>
 
             <legend class="post-legend">Load 5 pictures for the post</legend>
-            <p>Select five pictres for the review</p>
+            <p>Select five pictres for the review's gallery</p>
             <div class="col-12"><label for="Picture -1">Picture </label></div>
                 <div class="col-12"><input type="file" name="Picture -" id="Picture -1"></div>
                 
