--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,26 @@
         {% endfor %}
     #}
 
-
-
+    {#
+        _id:5eebf0d2dc9f7934fa3ce5f3
+        post_title:"Post Title"
+        post_subtitle:"Post Subtitle"
+        date_released:2020-06-18T23:00:00.000+00:00
+        date_posted:1577836800000
+        content:"Esto es un texto "
+        pros_content:"List of the good things of the game"
+        cons_content:"List of bad things of the game"
+        gallery_1:Binary('', 0)
+    #}
+    {% for post in posts %}
+        <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{url_for('gallery', filename={{post.post_cover}} ) }" alt="{{ post.post_title }}">
+                <div class="card-body">
+                    <h5 class="card-title">{{ post.post_title }}. {{ post.subtitle }}</h5>
+                    <p class="card-text">{{ post.content }}{{post.post_cover}}</p>
+                    <p>{{ post.posted_by }}</p>
+                    <a href="{url_for('review', )}" class="btn btn-primary">Read more</a>
+                </div>
+            </div>
+    {% endfor %}
 {% endblock %}
