--- a/templates/index.html
+++ b/templates/index.html
@@ -27,12 +27,13 @@
     #}
     {% for post in posts %}
         <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{url_for('gallery', filename={{post.post_cover}} ) }" alt="{{ post.post_title }}">
+                <!--img class="card-img-top" src="{url_for('gallery', filename={{post.post_cover}} ) }" alt="{{ post.post_title }}"-->
+                 <img class="card-img-top" src="{{url_for('upload', filename=post.post_cover)}}" alt="{{ post.post_title }}">
                 <div class="card-body">
                     <h5 class="card-title">{{ post.post_title }}. {{ post.subtitle }}</h5>
-                    <p class="card-text">{{ post.content }}{{post.post_cover}}</p>
-                    <p>{{ post.posted_by }}</p>
-                    <a href="{url_for('review', )}" class="btn btn-primary">Read more</a>
+                    <p class="card-text">{{ post.post_review }}</p>
+                    <p>Posted by: {{ post.posted_by }}</p>
+                    <a href="{{url_for('game_review', review_name=post.post_title)}}" class="btn btn-primary">Read more</a>
                 </div>
             </div>
     {% endfor %}
