--- a/templates/reviews_copy.html
+++ b/templates/reviews_copy.html
@@ -11,8 +11,8 @@
                             <img class="author-photo" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.t4E3Iky4gK0PNy-NVsFjXAHaHa%26pid%3DApi&f=1" alt="">
                         </div>
                         <div class="col-sm-8 col-9">
-                            <div class="author h3">By: <span>{{post.posted_by}}</span></div>
-                            <div class="posted-date h4">Posted on: {{post.date_posted}}</div>
+                            <div class="author h3">By: <span>Authors name</span></div>
+                            <div class="posted-date h4">Date/Posted</div>
                         </div>
                         <div class="col-sm-2 col-2 social-networks">
                             <i class="fab fa-facebook-f fa-2x"></i>
@@ -26,15 +26,14 @@
         <article>
             <div class="game-header text-white">
                 <div class="row">
-                    <div class="col-sm-12 col-xl-12">
-                        <img src="{{url_for('upload', filename=post.post_cover)}}" alt="" class="game-cover">
+                    <div class="col-sm-12 col-xl-12 game-cover">
                         <div class="row title-background ">
                             <div class="col-md-9 col-10 title-container">
-                                <div class="game-title h3"><span>{{post.post_title}}:<br> {{post.post_subtitle}}</span>
+                                <div class="game-title h3"><span>Super Smash Brothers: Ultimate</span>
                                 </div>
-                                <div class="game-players h4">No. players: <span> No. of players{{post.no_players}}</span>
+                                <div class="game-players h4">No. players: <span> No. of players</span>
                                 </div>
-                                <div class="game-release h4">Release Date: <span>{{post.release_date}}</span>
+                                <div class="game-release h4">Release Date: <span> Release/Date</span>
                                 </div>
                             </div>
 
@@ -76,27 +75,25 @@
                 <div class="pros-container col-6">
                     <div class="text-center">THE GOOD</div>
                     <div>
-                        {{post.pros_content}}
-                        <!--ul class="list-pros">
+                        <ul class="list-pros">
                             <li>Pros 1 long line to add content</li>
                             <li>Pros 2 long line to add content</li>
                             <li>Pros 3 long line to add content</li>
                             <li>Pros 4 long line to add content</li>
                             <li>Pros 5 long line to add content</li>
-                        </ul-->
+                        </ul>
                     </div>
                 </div>
                 <div class="cons-container col-6">
                     <div class="text-center">THE BAD</div>
                     <div>
-                        {{post.cons_content}}
-                        <!--ul class="list-cons">
+                        <ul class="list-cons">
                             <li>Cons 1 long line to add content</li>
                             <li>Cons 2 long line to add content</li>
                             <li>Cons 3 long line to add content</li>
                             <li>Cons 4 long line to add content</li>
                             <li>Cons 5 long line to add content</li>
-                        </ul-->
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -104,7 +101,7 @@
 
         <article>
             <div class="container game-review text-white">
-                {{post.post_review}}    
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, repudiandae maxime? Doloribus recusandae dolore omnis maiores dolores. Ipsum nihil laboriosam autem fugit adipisci quasi harum facere vitae itaque saepe beatae reiciendis corrupti nostrum exercitationem aliquid numquam recusandae doloremque expedita ipsa porro at, perspiciatis est. Perferendis assumenda iste unde numquam architecto aperiam temporibus eum autem explicabo! Quas, laborum distinctio. Repellendus sequi deserunt dolorem dolorum ipsa! Minima magnam eius praesentium. Praesentium ipsam dolore perferendis tenetur incidunt eaque excepturi necessitatibus. Molestiae atque reprehenderit cum. Magni dicta nulla quo repellat velit mollitia atque odit ullam molestiae consequatur facilis iure nostrum architecto animi voluptas pariatur, numquam et quisquam unde tempora necessitatibus quod inventore accusantium provident? Ipsum adipisci quia odit veritatis vel quaerat recusandae iste deleniti tempora facilis odio a, deserunt harum possimus fuga aliquid eum, quas enim omnis, perspiciatis repellendus exercitationem. Hic doloremque minus consectetur fuga, inventore corporis labore autem consequuntur quas illum vero velit totam dolorum deserunt dolores sint ex. Ad distinctio quisquam a, vero harum libero animi, odit quae totam quasi nemo voluptatem numquam nam eos amet. Ut omnis, optio nostrum nemo, in ullam consequuntur nihil est accusantium aspernatur pariatur exercitationem. Odio molestias rem praesentium. Hic deserunt beatae enim optio! Facilis laboriosam praesentium sit aliquam est maiores ad, eos sint officia repellendus quo reiciendis voluptates iure corporis! Nisi ducimus sapiente iste quaerat minima, quod, eius rerum modi optio ipsum deserunt ex nulla esse illo architecto temporibus consectetur ipsam, a labore delectus enim? Possimus voluptatibus assumenda quis, adipisci quod, impedit earum doloremque necessitatibus laudantium perferendis omnis esse quidem, maiores repudiandae? Temporibus magni sed asperiores exercitationem unde dignissimos, et odio laudantium assumenda, numquam quidem suscipit minus id libero nostrum obcaecati perspiciatis quod ab recusandae. Harum eos eligendi perspiciatis facilis ab. Deleniti nam, dignissimos, officiis maxime laboriosam rerum alias earum nulla incidunt id voluptates optio et. Voluptates fugiat dicta aspernatur aut rerum. Exercitationem fugit veritatis repudiandae mollitia amet qui impedit veniam dolorum neque vero in voluptate animi porro temporibus aspernatur dignissimos eos deleniti, et aut labore quas eveniet facilis nam. Nam nisi dicta inventore blanditiis provident adipisci molestiae, voluptas vero repellat illo fugiat, velit ullam nemo reprehenderit deserunt voluptates iure et aperiam sed odio magnam. Provident velit illum tempora non, nulla, iste, sed tempore error facilis labore maiores ipsa quis earum atque. Deleniti sapiente dolores doloremque qui fuga eum optio architecto labore aliquid adipisci reiciendis officia sed temporibus quas maiores blanditiis ut rem laboriosam delectus illo repellat, repellendus corporis deserunt? Saepe eveniet in, error aliquid dolores ex recusandae dicta adipisci, consequuntur quasi, ullam sit natus rem necessitatibus eum consectetur quod ducimus beatae. Officia ut sit aperiam quod nisi porro nesciunt alias eos molestias eum pariatur architecto repudiandae voluptates nemo commodi voluptatem necessitatibus, dolore nam voluptas incidunt dolorem quaerat. Ducimus voluptatum, illo provident dolorum, distinctio magni ut dignissimos recusandae veniam quis, necessitatibus beatae eius vel voluptatem harum nobis dolores nostrum eveniet nemo eaque quibusdam? Alias totam porro, itaque dolores distinctio accusantium, consequuntur, cumque minima amet non quo optio deleniti doloremque atque dicta animi a quibusdam est aut?
             </div>
         </article>
 
